fix image size on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -90,6 +90,11 @@ hr.article-divider{
     padding-top:240px;
 }
 
+/* supported by FabCafe */
+.supportedByFabCafe{
+    width: 40%;
+}
+
 
 /* parallax */
 .content {
